
find_package(BLAS)

if (NOT BLAS_FOUND)
    message(WARNING "No BLAS Library found. Slow reference implementation will be used for verification!")
endif()

add_subdirectory(../../../shared ${CMAKE_BINARY_DIR}/lib/hpccbase)
set(HOST_SOURCE execution_cannon.cpp gemm_benchmark.cpp)

set(HOST_EXE_NAME GEMM)
set(LIB_NAME ge)

if (INTELFPGAOPENCL_FOUND)
    add_library(${LIB_NAME}_intel STATIC ${HOST_SOURCE})
    target_include_directories(${LIB_NAME}_intel PRIVATE ${HPCCBaseLibrary_INCLUDE_DIRS} ${CMAKE_BINARY_DIR}/src/common ${IntelFPGAOpenCL_INCLUDE_DIRS})
    target_include_directories(${LIB_NAME}_intel PUBLIC ${CMAKE_SOURCE_DIR}/src/host)
    add_executable(${HOST_EXE_NAME}_intel main.cpp)
    target_link_libraries(${LIB_NAME}_intel "${IntelFPGAOpenCL_LIBRARIES}" "${OpenMP_CXX_FLAGS}")
    target_link_libraries(${LIB_NAME}_intel hpcc_fpga_base)
    target_link_libraries(${HOST_EXE_NAME}_intel ${LIB_NAME}_intel)
    if (USE_SVM)
        target_compile_definitions(${LIB_NAME}_intel PRIVATE -DCL_VERSION_2_0 -DUSE_SVM)
    endif()
    if (BLAS_FOUND)
        target_compile_definitions(${LIB_NAME}_intel PRIVATE -D_USE_BLAS_)
        target_link_libraries(${LIB_NAME}_intel ${BLAS_LIBRARIES})
        target_link_libraries(${LIB_NAME}_intel PRIVATE ${BLAS_LINKER_FLAGS})
    endif()
    target_compile_definitions(${LIB_NAME}_intel PRIVATE -DINTEL_FPGA)
    target_compile_options(${LIB_NAME}_intel PRIVATE "${OpenMP_CXX_FLAGS}")
    add_test(NAME test_intel_host_executable COMMAND $<TARGET_FILE:${HOST_EXE_NAME}_intel> -h)
endif()

if (Vitis_FOUND)
    add_library(${LIB_NAME}_xilinx STATIC ${HOST_SOURCE})
    target_include_directories(${LIB_NAME}_xilinx PRIVATE ${HPCCBaseLibrary_INCLUDE_DIRS} ${CMAKE_BINARY_DIR}/src/common ${Vitis_INCLUDE_DIRS})
    target_include_directories(${LIB_NAME}_xilinx PUBLIC ${CMAKE_SOURCE_DIR}/src/host)
    add_executable(${HOST_EXE_NAME}_xilinx main.cpp)
    target_link_libraries(${LIB_NAME}_xilinx ${Vitis_LIBRARIES} "${OpenMP_CXX_FLAGS}")
    target_link_libraries(${LIB_NAME}_xilinx hpcc_fpga_base)
    if (BLAS_FOUND)
        target_compile_definitions(${LIB_NAME}_xilinx PRIVATE -D_USE_BLAS_)
        target_link_libraries(${LIB_NAME}_xilinx ${BLAS_LIBRARIES})
        target_link_libraries(${LIB_NAME}_xilinx PRIVATE ${BLAS_LINKER_FLAGS})
        message(STATUS ${BLAS_LINKER_FLAGS} ${BLAS_LIBRARIES})
    endif()
    target_link_libraries(${HOST_EXE_NAME}_xilinx ${LIB_NAME}_xilinx)
    target_compile_definitions(${LIB_NAME}_xilinx PRIVATE -DXILINX_FPGA)
    target_compile_options(${LIB_NAME}_xilinx PRIVATE "${OpenMP_CXX_FLAGS}")
    add_test(NAME test_xilinx_host_executable COMMAND $<TARGET_FILE:${HOST_EXE_NAME}_xilinx> -h)
endif()
