include_directories(../../../extern/cxxopts/include)

set(HEADER_FILES execution.h setup/fpga_setup.hpp linpack_functionality.hpp)
set(HOST_SOURCE execution_blocked_pvt.cpp main.cpp setup/fpga_setup.cpp linpack_functionality.cpp)

if (INTELFPGAOPENCL_FOUND)
    include_directories(${IntelFPGAOpenCL_INCLUDE_DIRS})
    include_directories(${CMAKE_BINARY_DIR}/src/common)
    add_executable(LINPACK_intel ${HOST_SOURCE} ${HEADER_FILES})
    target_link_libraries(LINPACK_intel ${IntelFPGAOpenCL_LIBRARIES} "${OpenMP_CXX_FLAGS}")
    target_compile_definitions(LINPACK_intel PRIVATE -DINTEL_FPGA)
    target_compile_options(LINPACK_intel PRIVATE "${OpenMP_CXX_FLAGS}")
    add_test(NAME test_intel_host_executable COMMAND $<TARGET_FILE:LINPACK_intel> -h)
endif()

if (Vitis_FOUND)
    include_directories(${Vitis_INCLUDE_DIRS})
    include_directories(${CMAKE_BINARY_DIR}/src/common)
    add_executable(LINPACK_xilinx ${HOST_SOURCE} ${HEADER_FILES})
    target_link_libraries(LINPACK_xilinx ${Vitis_LIBRARIES} "${OpenMP_CXX_FLAGS}")
    target_compile_definitions(LINPACK_xilinx PRIVATE -DXILINX_FPGA)
    target_compile_options(LINPACK_xilinx PRIVATE "${OpenMP_CXX_FLAGS}")
    add_test(NAME test_xilinx_host_executable COMMAND $<TARGET_FILE:LINPACK_xilinx> -h)
endif()
